# stonenet

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  Cargo.toml  Dockerfile  INSTALL  LICENSE  README.md  find-broken-test-seed.sh  flake.nix  install.sh  rustfmt.toml  systemd.nix
.github/workflows/: cross-compilation.yml  linux.yml  macos.yml  rust.yml  windows.yml
assets/debian/: postrm  preinstall
assets/debian/systemd/: stonenetd.service
assets/generic/systemd/: stonenetd.service
assets/generic/xdg/: stonenet.desktop  stonenetd.desktop
assets/unix/systemd/: stonenetd.service
conf/: base.toml  debian.toml  default-system.toml  default-user.toml  default.toml  stonenet.conf.template
desktop/: Cargo.toml  README.md
desktop/assets/unix/xdg/: stonenet.desktop
desktop/src/: daemon.rs  main.rs
doc/: ABOUT  CONTRIB
examples/: create_query.rs
installer/: .gitignore  windows.nsi
package/: .gitignore  Dockerfile  cross-build.sh  stonenet.rb  windows.nsi
src/: activity_pub.rs  api.rs  common.rs  compression.rs  config.rs  core.rs  db.rs  entity.rs  global.rs  identity.rs  lib.rs  limited_store.rs  main.rs  migration.rs  model.rs  net.rs  os_path.rs  serde_limit.rs  test.rs  trace.rs  ui.rs  util.rs  web.rs
src/activity_pub/: actor.rs
src/db/: file_loader.rs  install.rs
src/entity/: activity_pub_actor.rs  activity_pub_actor_inbox.rs  activity_pub_follow.rs  activity_pub_follower.rs  activity_pub_following.rs  activity_pub_inbox_object.rs  activity_pub_object.rs  activity_pub_send_queue.rs  activity_pub_shared_inbox.rs  actor.rs  block.rs  boost_object.rs  bootstrap_id.rs  bootstrap_node_id.rs  consolidated_object.rs  file.rs  file_block.rs  file_blocks.rs  following.rs  friend.rs  friend_actor.rs  identity.rs  mod.rs  move_object.rs  my_identity.rs  node_identity.rs  object.rs  post_file.rs  post_files.rs  post_object.rs  post_tag.rs  prelude.rs  profile_object.rs  remembered_actor_nodes.rs  remembered_fingers.rs  share_object.rs  trust_list_checksum.rs  trusted_node.rs  trusted_node_trust_item.rs  trusted_node_update.rs  (+1 more)
src/migration/: util.rs  v0_1.rs
src/migration/v0/: mod.rs
src/migration/v0/v1/: v0.rs
src/migration/v0/v1/v0/entity/: boost_object.rs  file.rs  file_blocks.rs  identity.rs  mod.rs  object.rs  post_files.rs  post_object.rs  post_tag.rs  profile_object.rs
src/migration/v0/v2/: v0.rs
src/migration/v0/v2/v0/entity/: mod.rs  post_files.rs  post_tag.rs
src/migration/v0/v2/v1/: mod.rs
src/migration/v0/v3/: v0.rs
src/migration/v0/v4/: v0.rs  v1.rs
src/migration/v0/v5/: v0.rs
src/migration/v0/v6/: v0.rs
src/migration/v0/v7/: v0.rs  v1.rs
src/migration/v0/v8/: v0.rs
src/net/: actor.rs  actor_store.rs  bincode.rs  binserde.rs  bucket.rs  connection_manager.rs  exchange_manager.rs  message.rs  node.rs  object.rs  overlay.rs  socket.rs  sstp.rs  transport_manager.rs
src/net/overlay/: trust.rs
src/net/sstp/: server.rs  transporter.rs
src/tests/: simulation.rs
src/web/: activity_pub.rs  actor.rs  common.rs  consolidated_feed.rs  identity.rs  info.rs  json.rs  my_identity.rs  server.rs  webfinger.rs
src/web/activity_pub/: actor.rs
src/web/actor/: file.rs  object.rs
src/web/server/: activity_pub.rs  actor.rs  common.rs  identity.rs
src/web/server/actor/: file.rs  object.rs
static/css/: base.css  main.css
static/js/: bundle.js
templates/: actor.html.tera  base.tera  config.toml  error.html.tera  feed.html.tera  home.html.tera  macros.tera  my_identities.html copy.tera  my_identities.html.tera  profile.tera  search.html.tera  setup.html.tera
templates/activity_pub/: actor.html.tera
templates/actor/: object.html.tera
templates/identity/: new.html.tera  overview.html.tera  profile.html.tera
tests/: 1-no_peers.rs  2-two_peer_network.rs  3-small_network.rs  basic.rs  common.rs  communication.rs  no_peers.rs  simulation.rs  thousand_peers.rs  two_peers.rs
ts/: package.json  tsconfig.json  webpack.config.cjs
ts/src/: main.css  main.ts
~/.local/share/stonenet/: db.sqlite
