[package]
name = "stonenetd"
version = "0.0.17"
authors = ["Bamidev"]
description = "The daemon for the completely decentralized & censorship-resistant media platform."
edition = "2021"
homepage = "https://stonenet.org"
license = "MIT"
readme = "README.md"
rust-version = "1.68"

[dependencies]
format-bytes = "0"
arrayref = "0"
async-recursion = "1"
async-trait = "0"
base58 = "0"
serde-big-array = "*"
bincode = "1"
chrono = { version = "0", features = ["clock"] }
ctrlc = "3"
curve25519-dalek = "=4.1.1"
dirs = "4"
chacha20 = ">=0.9, <1.0"
ed25519 = { version = "*", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core", "std"] }
ed448-rust = { version = "0.1", git = "https://github.com/pdh11/ed448-rust.git" }
env_logger = "0"
fallible-iterator = "*"
futures = "0"
generic-array = "0"
hmac = ">=0.12, <1.0"
ipnetwork = "*"
lazy_static = "1"
libsqlite3-sys = "^0.27"
log = ">=0.4"
multipart = "0"
num = "0"
once_cell = "1"
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = "0.3"
reqwest = { version = "0", default-features = false }
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
rusqlite = "^0.30"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite"] }
semver = "1"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1"
sha3 = ">=0.10"
signal-hook = "0"
simple-logging = "2"
tempfile = "3"
thiserror = "*"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-stream = "0"
toml = "0"
unsafe-send-sync = { git = "https://github.com/bamidev/unsafe-send-sync" }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
zeroize = ">=1.3, <2"

[dev-dependencies]
ctor = "*"

[features]
unbundled = ["reqwest/native-tls"]
bundled = ["rusqlite/bundled", "reqwest/rustls-tls"]
trace-packets = []

[target.'cfg(target_family = "windows")'.dependencies]
reqwest = { version = "0", default-features = true }
rusqlite = { version = "^0.30", features = ["bundled"] }
windows = { version = "0", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Registry",
]}
winreg = "*"

[package.metadata.deb]
name = "stonenet"
revision = "main"
section = "net"
priority = "optional"
conf-files = ["etc/stonenet/config.toml"]
assets = [
	["target/release/stonenetd", "usr/bin/", "755"],
	["conf/default.toml", "etc/stonenet/config.toml", "644"],
	["assets/empty.sqlite", "var/lib/stonenet/db.sqlite", "774"],
	["static/**/*", "usr/share/stonenet/static", "644"],
	["templates/**/*", "usr/share/stonenet/templates", "644"],
]
depends = ["$auto", "libssl3", "libsqlite3-0"]
maintainer-scripts = "assets/debian"
systemd-units = { unit-scripts = "assets/debian/systemd" }
features = ["unbundled"]

[package.metadata.deb.variants.bundled]
depends = []
revision = "bundled"
features = ["bundled"]

[workspace]
members = ["desktop"]
