[package]
name = "stonenet-desktop"
version = "0.0.0"
authors = ["Bamidev"]
description = "The Stonenet desktop app."
edition = "2021"
homepage = "https://stonenet.org"
license = "MIT"
readme = "README.md"
rust-version = "1.68"


[target.'cfg(target_family = "windows")'.dependencies]
browser-window = { version = "0.12", features = ["edge2"] }
windows = { version = "0", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Registry",
]}
winreg = "*"

[target.'cfg(not(target_family = "windows"))'.dependencies]
browser-window = { version = "0.12", features = ["webkitgtk"] }

[package.metadata.deb]
name = "stonenet-desktop"
revision = "main"
section = "net"
priority = "optional"
assets = [
	["target/release/stonenet-desktop", "usr/bin/", "755"],
	["assets/unix/xdg/stonenet.desktop", "usr/share/applications/", "644"],
]
depends = ["$auto", "stonenet", "libwebkit2gtk-4.1-0"]
features = ["browser-window/webkitgtk"]
