[package]
name = "stonenet-desktop"
version = "0.1.2"
authors = ["Bamidev"]
description = "The Stonenet desktop app."
edition = "2021"
homepage = "https://stonenet.org"
license = "MIT"
readme = "README.md"
rust-version = "1.86"


[target.'cfg(target_family = "windows")'.dependencies]
browser-window = { git = "https://github.com/bamidev/browser-window", rev = "fad3fb2618849291f8751fd385af8e0ca1193d3e", features = ["edge2"] }
windows = { version = "0", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Registry",
]}
winreg = "0.55"

[target.'cfg(not(target_family = "windows"))'.dependencies]
browser-window = { git = "https://github.com/bamidev/browser-window", rev = "fad3fb2618849291f8751fd385af8e0ca1193d3e", features = ["webkitgtk"] }

[dependencies]
native-dialog = "0.9.3"
sysinfo = "0.36.1"

[package.metadata.deb]
name = "stonenet-desktop"
revision = "main"
section = "net"
priority = "optional"
assets = [
	["target/release/stonenet-desktop", "usr/bin/", "755"],
	["assets/unix/xdg/stonenet.desktop", "usr/share/applications/", "644"],
	["assets/logo/128x128.png", "usr/share/icons/hicolor/128x128/apps/stonenet.png", "644"],
	["assets/logo/64x64.png", "usr/share/icons/hicolor/64x64/apps/stonenet.png", "644"],
	["assets/logo/32x32.png", "usr/share/icons/hicolor/32x32/apps/stonenet.png", "644"],
]
depends = ["$auto", "stonenet", "libwebkit2gtk-4.0-37", "zenity"]
features = ["browser-window/webkitgtk"]
